lab03: Update code indentation

--- a/lab03/gcc-optimizations/Makefile
+++ b/lab03/gcc-optimizations/Makefile
@@ -1,6 +1,8 @@
 CC = gcc
 CFLAGS = -g -Wall -O0
 
+.PHONY: all clean
+
 all: main
 
 main: main.o
@@ -10,6 +12,5 @@ main.o: main.c
 run: main
 	time ./main
 
-.PHONY: clean
 clean:
 	rm -f *.o *~ main
