--- a/lab03/large-project/Makefile
+++ b/lab03/large-project/Makefile
@@ -16,4 +16,4 @@ utils/utils.o:
 	#TODO
 
 clean:
-	rm -f main main.o sum/sum.o sum/add/add.o utils/utils.o
+	rm -f main main.o sum/sum.o sum/add/add.o utils/utils.o *~
